# StockVeda

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: config.py  main.py
backend/core/: backtest_engine.py  beta_analysis.py  fno_signals.py  fno_universe.py  futures_continuous.py  grid_search.py  index_replication.py  indicators.py  markov_chain.py  ml_backtest.py  monte_carlo.py  options_backtest.py  options_math.py  options_price_source.py  options_spreads.py  orb_backtest.py  outlook.py  patterns.py  quant_signals.py  screener_engine.py  screener_universe.py
backend/data_sync/: base.py  nse_session.py  seed_symbols.py  sync_amfi.py  sync_bank_financials.py  sync_bhavcopy.py  sync_bse_market.py  sync_corporate_actions.py  sync_currency.py  sync_fii_dii.py  sync_fii_dii_hist.py  sync_fno.py  sync_fno_bhavcopy.py  sync_fno_futures.py  sync_fno_participant.py  sync_fundamentals.py  sync_global.py  sync_index_fundamentals.py  sync_indices.py  sync_intraday.py  sync_macro_india.py  sync_rbi.py  sync_shareholding.py  sync_shareholding_master.py  sync_vix.py
backend/db/: connection.py  schema.sql  stockveda.db
backend/routes/: analysis.py  backtest.py  fno.py  index_fund.py  intraday.py  macro.py  planner.py  screener.py  stock.py
data/sources/: data_sources.json
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: BacktestChart.tsx  BacktestResults.tsx  CandleChart.tsx  Chart.tsx  FnoFetchPanel.tsx  (+9 more)
scripts/: check_sources.py
(+22 files in other folders)
